--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-pandas==2.1.1
-numpy==1.24.3
-scikit-learn==1.3.0
-xgboost==2.0.0
-imbalanced-learn==0.11.0
-matplotlib==3.8.0
-seaborn==0.13.0
-flask==3.0.0
-joblib==1.3.2
-plotly==5.17.0
+pandas==2.2.3
+numpy==1.26.4
+scikit-learn==1.5.2
+xgboost==2.1.2
+imbalanced-learn==0.12.3
+matplotlib==3.9.2
+seaborn==0.13.2
+flask==3.0.3
+joblib==1.4.2
+plotly==5.24.1
+streamlit
